--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,6 +14,7 @@
     android:text="@string/login"/>
 
     <EditText
+        android:id="@+id/loginName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/login_name"
@@ -29,9 +30,16 @@
         android:layout_height="wrap_content"
         android:hint="@string/password"
         android:inputType="textPassword" />
+
+    <Button
+        android:id="@+id/btnLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 <ImageView
+
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:src="@drawable/flag"/>
+    android:src="@drawable/flag"
+    android:onClick="@showScreen"/>
 
 </LinearLayout>
