--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,6 +32,7 @@
         android:inputType="textPassword" />
 
     <Button
+        android:text="@string/ButtonText"
         android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -40,6 +41,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:src="@drawable/flag"
-    android:onClick="@showScreen"/>
+            />
 
 </LinearLayout>
